@@ -1,5 +1,6 @@
 package cz.tacr.elza.service;
 
+import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -23,6 +24,7 @@ import java.util.stream.Collectors;
 
 import cz.tacr.elza.controller.vo.*;
 import jakarta.annotation.Nullable;
+import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotNull;
 
 import org.apache.commons.collections4.CollectionUtils;
@@ -40,21 +42,42 @@ import com.google.common.eventbus.Subscribe;
 
 import cz.tacr.elza.EventBusListener;
 import cz.tacr.elza.common.ObjectListIterator;
+import cz.tacr.elza.common.datetime.DateTimeConvertor;
 import cz.tacr.elza.config.ConfigView;
 import cz.tacr.elza.config.view.LevelConfig;
 import cz.tacr.elza.config.view.ViewTitles;
 import cz.tacr.elza.controller.ArrangementController.Depth;
 import cz.tacr.elza.controller.config.ClientFactoryVO;
+import cz.tacr.elza.controller.vo.AccordionNodeVO;
+import cz.tacr.elza.controller.vo.ArrDigitizationRequestVO;
+import cz.tacr.elza.controller.vo.ArrRequestVO;
+import cz.tacr.elza.controller.vo.DigitizationRequest;
+import cz.tacr.elza.controller.vo.NodeAccordionData;
+import cz.tacr.elza.controller.vo.NodeConformity;
+import cz.tacr.elza.controller.vo.NodeConformityError;
+import cz.tacr.elza.controller.vo.NodeConformityMissing;
+import cz.tacr.elza.controller.vo.NodeConformityState;
+import cz.tacr.elza.controller.vo.NodeConformityVO;
+import cz.tacr.elza.controller.vo.NodeData;
+import cz.tacr.elza.controller.vo.NodeDataParam;
+import cz.tacr.elza.controller.vo.NodeItemWithParent;
+import cz.tacr.elza.controller.vo.NodeTreeData;
+import cz.tacr.elza.controller.vo.RequestState;
+import cz.tacr.elza.controller.vo.TreeData;
+import cz.tacr.elza.controller.vo.TreeNode;
+import cz.tacr.elza.controller.vo.TreeNodeVO;
+import cz.tacr.elza.controller.vo.TreeNodeWithFundVO;
+import cz.tacr.elza.controller.vo.WfSimpleIssue;
+import cz.tacr.elza.controller.vo.WfSimpleIssueVO;
 import cz.tacr.elza.controller.vo.nodes.ArrNodeExtendVO;
-import cz.tacr.elza.controller.vo.nodes.NodeData;
-import cz.tacr.elza.controller.vo.nodes.NodeDataParam;
-import cz.tacr.elza.core.data.ItemType;
-import cz.tacr.elza.core.data.StaticDataProvider;
+import cz.tacr.elza.controller.vo.nodes.NodeDataParamVO;
+import cz.tacr.elza.controller.vo.nodes.NodeDataVO;
 import cz.tacr.elza.core.data.StaticDataService;
 import cz.tacr.elza.domain.ArrBulkActionRun;
 import cz.tacr.elza.domain.ArrChange;
 import cz.tacr.elza.domain.ArrDao;
 import cz.tacr.elza.domain.ArrDao.DaoType;
+import cz.tacr.elza.domain.UsrPermission.Permission;
 import cz.tacr.elza.domain.ArrDaoLink;
 import cz.tacr.elza.domain.ArrDigitizationRequest;
 import cz.tacr.elza.domain.ArrFund;
@@ -62,13 +85,15 @@ import cz.tacr.elza.domain.ArrFundVersion;
 import cz.tacr.elza.domain.ArrNode;
 import cz.tacr.elza.domain.ArrNodeConformityExt;
 import cz.tacr.elza.domain.ArrRequest;
-import cz.tacr.elza.domain.RulItemType;
 import cz.tacr.elza.domain.UsrPermission;
 import cz.tacr.elza.domain.WfIssue;
+import cz.tacr.elza.domain.vo.RelatedNodeDirection;
 import cz.tacr.elza.domain.vo.TitleValue;
 import cz.tacr.elza.domain.vo.TitleValues;
 import cz.tacr.elza.exception.BusinessException;
+import cz.tacr.elza.exception.ObjectNotFoundException;
 import cz.tacr.elza.exception.SystemException;
+import cz.tacr.elza.exception.codes.ArrangementCode;
 import cz.tacr.elza.exception.codes.BaseCode;
 import cz.tacr.elza.repository.DaoLinkRepository;
 import cz.tacr.elza.repository.FundVersionRepository;
@@ -76,6 +101,7 @@ import cz.tacr.elza.repository.LevelRepository;
 import cz.tacr.elza.repository.LevelRepositoryCustom;
 import cz.tacr.elza.repository.LevelRepositoryCustom.LevelInfo;
 import cz.tacr.elza.repository.NodeRepository;
+import cz.tacr.elza.security.AuthorizationRequest;
 import cz.tacr.elza.security.UserDetail;
 import cz.tacr.elza.security.UserPermission;
 import cz.tacr.elza.service.event.CacheInvalidateEvent;
@@ -88,7 +114,6 @@ import cz.tacr.elza.service.eventnotification.events.EventNodeMove;
 import cz.tacr.elza.service.eventnotification.events.EventType;
 import cz.tacr.elza.service.eventnotification.events.EventVersion;
 import cz.tacr.elza.service.vo.TitleItemsByType;
-
 
 /**
  * Servistní třída pro načtení a cachování uzlů ve stromu daných verzí.
@@ -157,12 +182,108 @@ public class LevelTreeCacheService implements NodePermissionChecker {
 
     @Autowired
     private DaoLinkRepository daoLinkRepository;
+    
+    /**
+     * Cached node hierarchy (tree).
+     * 
+     * Allows to speedup access to the hierarchy
+     * 
+     * !!!! This class is not thread safe
+     */
+    static public class NodeHierarchy {
+    	/**
+    	 * nodeId -> TreeNode
+    	 */
+    	Map<Integer, TreeNode> nodes = new HashMap<>();
 
+		public Map<Integer, TreeNode> getNodes() {
+			return nodes;
+		}
+		
+		public List<TreeNode> getSiblingsAround(ArrNode node, Integer around) {
+			return getSiblingsAround(node.getNodeId(), around);
+		}
+
+		public List<TreeNode> getSiblingsAround(Integer nodeId, Integer around) {
+			TreeNode tn = nodes.get(nodeId);
+			if(tn==null) {
+				return null;
+			}
+	        TreeNode parent = tn.getParent();
+			if(parent==null) {
+				return null;
+			}
+			List<TreeNode> children = parent.getChildren();
+	        int nodeIndex = children.indexOf(tn);
+	        int min = nodeIndex - around;
+	        int max = nodeIndex + around;	        
+
+	        min = min < 0 ? 0 : min;
+	        max = max > children.size() - 1 ? children.size() - 1 : max;
+
+	        List<TreeNode> result = new ArrayList<>();	        
+	        for (int i = min; i <= max; i++) {
+	            result.add(children.get(i));
+	        }
+
+	        return result;			
+		}
+
+		public Collection<TreeNode> getNodesByDirection(Integer nodeId, RelatedNodeDirection direction) {
+			TreeNode tn = this.nodes.get(nodeId);
+			if(tn==null) {
+				throw new BusinessException("Cannot find node", BaseCode.ID_NOT_EXIST)
+					.set("nodeId", nodeId);
+			}
+			switch(direction) {
+			case CHILDREN:
+				return tn.getChildren();
+			case NODE:
+				return Collections.singletonList(tn);
+			case PARENT:
+				TreeNode directParent = tn.getParent();
+				return directParent == null ? Collections.emptyList() : Collections.singletonList(directParent);
+			case ASCENDANTS:
+				List<TreeNode> parents = new ArrayList<>();
+				TreeNode parent = tn.getParent();
+				while(parent!=null) {
+					parents.add(parent);
+					parent = parent.getParent();
+				}
+				return parents;
+			case SIBLINGS:
+				return getSiblingsAround(nodeId, 1);
+			case ALL:
+				// find root and return descendants of root including root
+				TreeNode rootNode = tn;
+				while(rootNode.getParent()!=null) {
+					rootNode = rootNode.getParent();
+				}
+				Collection<TreeNode> descendants = getNodesByDirection(rootNode.getId(), RelatedNodeDirection.DESCENDANTS);
+				descendants.add(rootNode);
+				return descendants;
+			case DESCENDANTS:
+				List<TreeNode> result = new ArrayList<>();
+				List<TreeNode> toProcess = new LinkedList<>();				
+				toProcess.addAll(tn.getChildren());
+				while(!toProcess.isEmpty()) {
+					TreeNode node = toProcess.remove(0);
+					result.add(node);
+					toProcess.addAll(node.getChildren());
+				}
+				return result;
+			default:
+				throw new BusinessException("Unknown direction", BaseCode.INVALID_STATE)
+					.set("direction", direction);
+			}
+		}
+    }
+    
     /**
      * Cache stromu pro danou verzi. (id verze -> nodeid uzlu -> uzel).
      * Maximální počet záznamů v cache {@link #maxCacheSize}.
      */
-    private CapacityMap<Integer, Map<Integer, TreeNode>> versionCache = new CapacityMap<Integer, Map<Integer, TreeNode>>();
+    private CapacityMap<Integer, NodeHierarchy> versionCache = new CapacityMap<Integer, NodeHierarchy>();
 
     @Subscribe
     public synchronized void invalidateCache(final CacheInvalidateEvent cacheInvalidateEvent) {
@@ -211,7 +332,12 @@ public class LevelTreeCacheService implements NodePermissionChecker {
         }
 
         //seřazené otevřené nody tak jak půjdou v seznamu po sobě
-        TreeSet<TreeNode> expandedSort = new TreeSet<>(expandedNodes.values());
+        Collection<TreeNode> expandedNodesCollection = expandedNodes.values();
+        TreeSet<TreeNode> expandedSort = new TreeSet<>(expandedNodesCollection);
+        // check size of tree
+        if(expandedSort.size()!=expandedNodesCollection.size()) {
+        	throw new BusinessException("Chyba ve vybranych uzlů", ArrangementCode.REQUEST_INVALID);
+        }
         Iterator<TreeNode> expandedIterator = expandedSort.iterator();
 
         LinkedHashMap<Integer, TreeNode> nodesMap = new LinkedHashMap<>();
@@ -228,7 +354,7 @@ public class LevelTreeCacheService implements NodePermissionChecker {
         } else {
             while (expandedIterator.hasNext()) {
                 TreeNode next = expandedIterator.next();
-                if (next.getId().equals(nodeId)) {
+                if (next.getId()==nodeId.intValue()) {
                     addNodesToResultList(nodesMap, next, expandedIterator);
                     break;
                 }
@@ -246,7 +372,7 @@ public class LevelTreeCacheService implements NodePermissionChecker {
         LinkedHashMap<Integer, Node> nodes = getNodes(nodesMap, rootNode, param, version);
 
         boolean fullArrPerm = userService.hasFullArrPerm(version.getFundId());
-        return new TreeData(convertToTreeNodeWithPerm(nodes.values(), version, fullArrPerm), parentNodeIds, fullArrPerm);
+        return new TreeData(convertToTreeNodeWithPermOld(nodes.values(), version, fullArrPerm), parentNodeIds, fullArrPerm);
     }
 
     /**
@@ -272,7 +398,7 @@ public class LevelTreeCacheService implements NodePermissionChecker {
             TreeNode treeNode = versionTreeCache.get(nodeId);
             if (treeNode != null) {
                 TreeNode parent = treeNode;
-                while (parent != null && subTreeMap.get(parent) == null) {
+                while (parent != null && subTreeMap.get(parent.getId()) == null) {
                     subTreeMap.put(parent.getId(), parent);
                     parent = parent.getParent();
                 }
@@ -353,6 +479,30 @@ public class LevelTreeCacheService implements NodePermissionChecker {
         return nodeItemWithParents;
     }
 
+    public List<NodeTreeData> getNodeParents(final Map<Integer, TreeNode> treeMap, final TreeNode node, final ArrFundVersion fundVersion) {
+
+    	LinkedHashMap<Integer, TreeNode> parentMap = new LinkedHashMap<>();
+        LinkedList<TreeNode> parents = new LinkedList<>();
+
+        TreeNode parent = node.getParent();
+        while (parent != null) {
+            parents.addFirst(parent);
+            parent = parent.getParent();
+        }
+
+        for (TreeNode p : parents) {
+            parentMap.put(p.getId(), p);
+        }
+
+        Map<Integer, TitleItemsByType> valuesMap = createValuesMap(parentMap, fundVersion, node);
+        Map<Integer, NodeTreeData> resultMap = createNodesWithTitlesNew(parentMap, valuesMap, node, fundVersion);
+
+        List<NodeTreeData> result = new ArrayList<>(resultMap.values());
+
+        Collections.reverse(result);
+        return result;
+    }
+    
     /**
      * Najde v cache seznam rodičů daného uzlu. Seřazeno od prvního rodiče po kořen stromu.
      *
@@ -360,7 +510,8 @@ public class LevelTreeCacheService implements NodePermissionChecker {
      * @param fundVersion verze stromu
      * @return seznam rodičů
      */
-    public Collection<TreeNodeVO> getNodeParents(final Map<Integer, TreeNode> treeMap, final TreeNode node, final ArrFundVersion fundVersion) {
+    @Deprecated
+    public Collection<TreeNodeVO> getNodeParentsOld(final Map<Integer, TreeNode> treeMap, final TreeNode node, final ArrFundVersion fundVersion) {
 
         LinkedHashMap<Integer, TreeNode> parentMap = new LinkedHashMap<>();
         LinkedList<TreeNode> parents = new LinkedList<>();
@@ -397,7 +548,7 @@ public class LevelTreeCacheService implements NodePermissionChecker {
                                           final TreeNode node,
                                           final Iterator<TreeNode> expandedNodesIterator) {
         if (!expandedNodesIterator.hasNext()) {
-            for (TreeNode child : node.getChilds()) {
+            for (TreeNode child : node.getChildren()) {
                 nodesMap.put(child.getId(), child);
             }
             return null;
@@ -407,7 +558,7 @@ public class LevelTreeCacheService implements NodePermissionChecker {
 
         //pokud má aktuální uzel a další otevřený uzel stejného rodiče, musíme postupně přidávat, protože v jeho dětech jsou další otevřené uzly
         if (nextNode.getParent().equals(node)) {
-            for (TreeNode child : node.getChilds()) {
+            for (TreeNode child : node.getChildren()) {
                 nodesMap.put(child.getId(), child);
                 //až najdeme další otevřený uzel v potomcích, přidáme jeho potomky do seznamu
                 if (child.equals(nextNode)) {
@@ -416,7 +567,7 @@ public class LevelTreeCacheService implements NodePermissionChecker {
             }
         } else {
             //pokud potomci nejsou otevření, můžeme je všechny přidat do seznamu
-            for (TreeNode child : node.getChilds()) {
+            for (TreeNode child : node.getChildren()) {
                 nodesMap.put(child.getId(), child);
             }
         }
@@ -462,17 +613,17 @@ public class LevelTreeCacheService implements NodePermissionChecker {
      * @param version verze stromu
      * @return mapu všech uzlů stromu (nodeid uzlu --> uzel)
      */
-    private Map<Integer, TreeNode> createVersionTreeCache(final ArrFundVersion version) {
+    private NodeHierarchy createVersionTreeCache(final ArrFundVersion version) {
         Validate.notNull(version, "Verze AS musí být vyplněna");
 
-        Integer rootId = version.getRootNode().getNodeId();
+        Integer rootId = version.getRootNodeId();
         ArrChange change = version.getLockChange();
 
         //všechny uzly stromu
         return createTreeNodeMap(change, rootId);
     }
 
-    public Map<Integer, TreeNode> createTreeNodeMap(ArrChange change, Integer rootNodeId) {
+    public NodeHierarchy createTreeNodeMap(ArrChange change, Integer rootNodeId) {
 
         //kořen
         LevelRepositoryCustom.LevelInfo rootInfo = new LevelRepositoryCustom.LevelInfo(rootNodeId, 0, null);
@@ -487,14 +638,15 @@ public class LevelTreeCacheService implements NodePermissionChecker {
         levelInfoMap.put(rootNodeId, rootInfo);
 
         //výsledná mapa
-        Map<Integer, TreeNode> allMap = new HashMap<>();
+        NodeHierarchy nodeHierarchy = new NodeHierarchy();
+        
         for (LevelRepositoryCustom.LevelInfo levelInfo : levelInfoMap.values()) {
-            createTreeNodeMap(levelInfo, levelInfoMap, allMap);
+            createTreeNodeMap(levelInfo, levelInfoMap, nodeHierarchy.nodes);
         }
 
         //seřazení dětí všech uzlů podle pozice
         Comparator<TreeNode> comparator = (o1, o2) -> {
-            int ret = o1.getPosition().compareTo(o2.getPosition());
+            int ret = Integer.compare(o1.getPosition(), o2.getPosition());
             if (ret == 0) {
                 // check same position
                 logger.error("Two nodes on same position, nodeId: {}, nodeId: {}",
@@ -505,12 +657,13 @@ public class LevelTreeCacheService implements NodePermissionChecker {
             }
             return ret;
         };
-        for (TreeNode treeNode : allMap.values()) {
-            treeNode.getChilds().sort(comparator);
+        for (TreeNode treeNode : nodeHierarchy.nodes.values()) {
+            treeNode.getChildren().sort(comparator);
         }
 
-        initReferenceMarksAndDepth(allMap.get(rootNodeId));
-        return allMap;
+        // TODO: count reference mark dynamically
+        initReferenceMarksAndDepth(nodeHierarchy.nodes.get(rootNodeId));
+        return nodeHierarchy;
     }
 
 
@@ -555,7 +708,7 @@ public class LevelTreeCacheService implements NodePermissionChecker {
         rootNode.setReferenceMark(new Integer[0]);
         rootNode.setDepth(1);
         int childPosition = 1;
-        for (TreeNode child : rootNode.getChilds()) {
+        for (TreeNode child : rootNode.getChildren()) {
             initReferenceMarkAndDepth(child, childPosition++);
         }
     }
@@ -575,7 +728,7 @@ public class LevelTreeCacheService implements NodePermissionChecker {
         treeNode.setDepth(referenceMark.length + 1);
 
         int childPosition = 1;
-        for (TreeNode child : treeNode.getChilds()) {
+        for (TreeNode child : treeNode.getChildren()) {
             initReferenceMarkAndDepth(child, childPosition++);
         }
     }
@@ -598,7 +751,7 @@ public class LevelTreeCacheService implements NodePermissionChecker {
         result.setDepth(treeNode.getDepth());
 
         //nastavíme původní děti, které budou použity na vytvoření výsledného seznamu
-        result.setChilds(treeNode.getChilds());
+        result.setChildren(treeNode.getChildren());
 
         expandedTreeNodesMap.put(result.getId(), result);
 
@@ -616,9 +769,9 @@ public class LevelTreeCacheService implements NodePermissionChecker {
      * @param version verze stromu
      * @return mapa všech uzlů stromu (nodeid uzlu -> uzel)
      */
-    synchronized public Map<Integer, TreeNode> getVersionTreeCache(final ArrFundVersion version) {
+    synchronized public NodeHierarchy getNodeHierarchy(final ArrFundVersion version) {
         Validate.notNull(version, "Verze AS není vyplněna");
-        Map<Integer, TreeNode> versionTreeMap = versionCache.get(version.getFundVersionId());
+        NodeHierarchy versionTreeMap = versionCache.get(version.getFundVersionId());
 
         if (versionTreeMap == null) {
             versionTreeMap = createVersionTreeCache(version);
@@ -629,8 +782,19 @@ public class LevelTreeCacheService implements NodePermissionChecker {
         versionCache.remove(version.getFundVersionId());
         versionCache.put(version.getFundVersionId(), versionTreeMap);
 
-
         return versionTreeMap;
+    }
+
+    /**
+     * Vytvoří cache stromu dané verze a uloží jej do cache. Druhé volání již vrací nacachovaná data.
+     *
+     * @param version verze stromu
+     * @return mapa všech uzlů stromu (nodeid uzlu -> uzel)
+     * 
+     * @see Use getNodeHierarchy instead of this function
+     */
+    synchronized public Map<Integer, TreeNode> getVersionTreeCache(final ArrFundVersion version) {
+    	return getNodeHierarchy(version).getNodes();
     }
 
     /**
@@ -793,6 +957,98 @@ private void processEvent(AbstractEventSimple event) {
      * @param version        verze stromu
      * @return seznam rozbalených uzlů s potomky seřazen
      */
+    private Map<Integer, NodeTreeData> createNodesWithTitlesNew(final Map<Integer, TreeNode> treeNodeMap,
+                                                           		@Nullable final Map<Integer, TitleItemsByType> valuesMapParam,
+                                                           		final TreeNode subtreeRoot,
+                                                           		final ArrFundVersion version) {
+        Validate.notNull(treeNodeMap, "Mapa nesmí být null");
+        Validate.notNull(version, "Verze AS musí být vyplněna");
+
+        Map<Integer, ArrDao> daoLevelMap = new HashMap<>();
+        // read nodes
+        List<ArrNode> nodes = new ArrayList<>(treeNodeMap.size());
+        Set<Integer> nodeIds = treeNodeMap.keySet();
+        ObjectListIterator<Integer> iterator = new ObjectListIterator<>(nodeIds);
+        while (iterator.hasNext()) {
+            List<Integer> nodeIdsSublist = iterator.next();
+
+            nodes.addAll(nodeRepository.findAllById(nodeIdsSublist));
+            // read dao links
+            if (displayDaoId) {
+                List<ArrDaoLink> daoLinks = daoLinkRepository.findByNodeIdsAndFetchDao(nodeIdsSublist);
+                for (ArrDaoLink daoLink : daoLinks) {
+                    if (daoLink.getDao().getDaoType().equals(DaoType.LEVEL)) {
+                        daoLevelMap.put(daoLink.getNodeId(), daoLink.getDao());
+                    }
+                }
+            }
+        }
+        Map<Integer, ArrNode> nodeMap = new HashMap<>(nodes.size());
+        for (ArrNode node : nodes) {
+            nodeMap.put(node.getNodeId(), node);
+        }
+
+        // create titles
+        ViewTitles viewTitles = configView.getViewTitles(version.getRuleSetId(), version.getFundId());
+        Map<Integer, TitleItemsByType> valuesMap = valuesMapParam;
+        if (valuesMap == null) {
+            valuesMap = createValuesMap(treeNodeMap, version, subtreeRoot);
+        }
+        Integer levelTypeId = viewTitles.getLevelTypeId();
+
+        Map<Integer, NodeTreeData> result = new LinkedHashMap<>(treeNodeMap.size());
+
+        List<String> rootReferenceMark = new ArrayList<>();
+        if (subtreeRoot != null) {
+            rootReferenceMark = Arrays.asList(createClientReferenceMarkFromRoot(subtreeRoot, viewTitles, valuesMap));
+        }
+        List<String> parentReferenceMark = rootReferenceMark;
+
+        for (TreeNode treeNode : treeNodeMap.values()) {
+            if (subtreeRoot != null && treeNode.getParent() != null) {
+                if (treeNode.getParent().equals(subtreeRoot)) {
+                    parentReferenceMark = rootReferenceMark;
+                } else {
+                    parentReferenceMark = result.get(treeNode.getParent().getId()).getReferenceMark();
+                }
+            }
+
+            NodeTreeData node = new NodeTreeData(treeNode.getId(), treeNode.getDepth(), null,
+                    		  			   	     !treeNode.getChildren().isEmpty(),
+                    						   	 null, 
+                    						   	 nodeMap.get(treeNode.getId()).getVersion());
+            if (subtreeRoot != null) {
+            	String[] referenceMark = createClientNodeReferenceMark(treeNode, levelTypeId, viewTitles, valuesMap, (String[]) parentReferenceMark.toArray());
+                node.setReferenceMark(Arrays.asList(referenceMark));
+            }
+
+            result.put(treeNode.getId(), node);
+        }
+
+        if (result.isEmpty()) {
+            return result;
+        }
+
+        for (NodeTreeData node : result.values()) {
+            TitleItemsByType descItemCodeToValueMap = valuesMap.get(node.getId());
+            ArrDao dao = daoLevelMap.get(node.getId());
+            fillNodeValues(version, descItemCodeToValueMap, viewTitles, node, dao);
+        }
+
+        return result;
+    }
+
+    /**
+     * Provede načtení popisků uzlů pro uzly, které budou odeslány do klienta a vytvoří výsledné odesílané objekty.
+     *
+     * @param treeNodeMap    seřazená mapa uzlů tak jak budou odeslány (nodeid -> uzel)
+     * @param valuesMapParam mapa načtených hodnot pro uzly, pokud není nastaveno, bude spočítáno
+     * @param subtreeRoot kořenový uzel, pod kterým chceme spočítat referenční označení (nemusí být kořen stromu).
+     *                    Pokud není nastaveno, není počítáno referenční označení
+     * @param version        verze stromu
+     * @return seznam rozbalených uzlů s potomky seřazen
+     */
+    @Deprecated
     private Map<Integer, TreeNodeVO> createNodesWithTitles(final Map<Integer, TreeNode> treeNodeMap,
                                                            @Nullable final Map<Integer, TitleItemsByType> valuesMapParam,
                                                            final TreeNode subtreeRoot,
@@ -852,11 +1108,10 @@ private void processEvent(AbstractEventSimple event) {
             }
 
             TreeNodeVO client = new TreeNodeVO(treeNode.getId(), treeNode.getDepth(), null,
-                    !treeNode.getChilds().isEmpty(),
+                    !treeNode.getChildren().isEmpty(),
                     treeNode.getReferenceMark(), nodeMap.get(treeNode.getId()).getVersion());
             if (subtreeRoot != null) {
-                String[] referenceMark = createClientNodeReferenceMark(treeNode, levelTypeId, viewTitles, valuesMap,
-                        parentReferenceMark);
+                String[] referenceMark = createClientNodeReferenceMark(treeNode, levelTypeId, viewTitles, valuesMap, parentReferenceMark);
                 client.setReferenceMark(referenceMark);
             }
 
@@ -867,7 +1122,6 @@ private void processEvent(AbstractEventSimple event) {
             return result;
         }
 
-
         for (TreeNodeVO treeNodeClient : result.values()) {
             TitleItemsByType descItemCodeToValueMap = valuesMap.get(treeNodeClient.getId());
             ArrDao dao = daoLevelMap.get(treeNodeClient.getId());
@@ -877,25 +1131,53 @@ private void processEvent(AbstractEventSimple event) {
         return result;
     }
 
-    private List<RulItemType> getDescriptionItemTypes(final ViewTitles viewTitles) {
+    /**
+     * Return list of item type ids
+     * @param viewTitles
+     * @return
+     */
+    private List<Integer> getDescriptionItemTypes(final ViewTitles viewTitles) {
         Set<Integer> typeIds = viewTitles.getAllItemTypeIds();
 
         if (typeIds.isEmpty()) {
             return Collections.emptyList();
         }
 
-        List<RulItemType> result = new ArrayList<>();
-
-        StaticDataProvider data = staticDataService.getData();
-        for (Integer typeId : typeIds) {
-            ItemType rsit = data.getItemTypeById(typeId);
-            if (rsit == null) {
-                logger.warn("Nepodařilo se nalézt typ atributu, kód=" + typeId + ". Změňte kód v konfiguraci.");
-                continue;
-            }
-            result.add(rsit.getEntity());
-        }
+        List<Integer> result = new ArrayList<>(typeIds);
         return result;
+    }
+
+    /**
+     * Nastavení hodnot (icon, name) ve třídě NodeTreeData.
+     *
+     * @param version
+     * @param descItemCodeToValueMap
+     * @param viewTitles
+     * @param treeNode
+     * @param dao
+     *            Volitelný hlavní dao, může být null
+     */
+    private void fillNodeValues(final ArrFundVersion version,
+                                final TitleItemsByType descItemCodeToValueMap,
+                                final ViewTitles viewTitles,
+                                final NodeTreeData treeNode,
+                                final ArrDao dao) {
+
+        if (descItemCodeToValueMap != null) {
+            String icon = getIcon(descItemCodeToValueMap, viewTitles);
+            treeNode.setIcon(icon);
+        }
+
+        String defaultTitle;
+        if (treeNode.getDepth() > 1) {
+            defaultTitle = createDefaultTitle(viewTitles, treeNode.getId());
+        } else {
+            defaultTitle = createRootTitle(version.getFund(), viewTitles, treeNode.getId());
+        }
+
+        ArrDao displayDao = displayDaoId? dao : null;
+
+        treeNode.setName(viewTitles.getTreeItem().build(descItemCodeToValueMap, displayDao, defaultTitle));
     }
 
     /**
@@ -904,31 +1186,32 @@ private void processEvent(AbstractEventSimple event) {
      * @param version
      * @param descItemCodeToValueMap
      * @param viewTitles
-     * @param treeNodeClient
+     * @param treeNode
      * @param dao
      *            Volitelný hlavní dao, může být null
      */
+    @Deprecated
     private void fillValues(final ArrFundVersion version,
                             final TitleItemsByType descItemCodeToValueMap,
                             final ViewTitles viewTitles,
-                            final TreeNodeVO treeNodeClient,
+                            final TreeNodeVO treeNode,
                             final ArrDao dao) {
 
         if (descItemCodeToValueMap != null) {
             String icon = getIcon(descItemCodeToValueMap, viewTitles);
-            treeNodeClient.setIcon(icon);
+            treeNode.setIcon(icon);
         }
 
         String defaultTitle;
-        if (treeNodeClient.getDepth() > 1) {
-            defaultTitle = createDefaultTitle(viewTitles, treeNodeClient.getId());
+        if (treeNode.getDepth() > 1) {
+            defaultTitle = createDefaultTitle(viewTitles, treeNode.getId());
         } else {
-            defaultTitle = createRootTitle(version.getFund(), viewTitles, treeNodeClient.getId());
+            defaultTitle = createRootTitle(version.getFund(), viewTitles, treeNode.getId());
         }
 
         ArrDao displayDao = displayDaoId? dao : null;
 
-        treeNodeClient.setName(viewTitles.getTreeItem().build(descItemCodeToValueMap, displayDao, defaultTitle));
+        treeNode.setName(viewTitles.getTreeItem().build(descItemCodeToValueMap, displayDao, defaultTitle));
     }
 
     /**
@@ -958,7 +1241,7 @@ private void processEvent(AbstractEventSimple event) {
 
         ViewTitles viewTitles = configView
                 .getViewTitles(version.getRuleSetId(), version.getFund().getFundId());
-        List<RulItemType> descItemTypes = getDescriptionItemTypes(viewTitles);
+        List<Integer> descItemTypes = getDescriptionItemTypes(viewTitles);
 
         return descriptionItemService.createNodeValuesByItemTypeCodeMap(treeNodeMap.keySet(), descItemTypes,
                                                                         version.getLockChangeId(), subtreeRoot);
@@ -986,12 +1269,12 @@ private void processEvent(AbstractEventSimple event) {
             TreeNode deleteNode = versionTreeMap.get(nodeId);
             TreeNode parent = deleteNode.getParent();
             if (parent != null) {
-                int deleteNodeIndex = parent.getChilds().indexOf(deleteNode);
-                parent.getChilds().remove(deleteNode);
-                repositionList(parent.getChilds());
+                int deleteNodeIndex = parent.getChildren().indexOf(deleteNode);
+                parent.getChildren().remove(deleteNode);
+                repositionList(parent.getChildren());
 
-                if (parent.getChilds().size() > deleteNodeIndex) {
-                    initReferenceMarkLower(parent.getChilds(), parent.getChilds().get(deleteNodeIndex));
+                if (parent.getChildren().size() > deleteNodeIndex) {
+                    initReferenceMarkLower(parent.getChildren(), parent.getChildren().get(deleteNodeIndex));
                 }
             }
             removeFromCacheTree(versionTreeMap, deleteNode);
@@ -1007,7 +1290,7 @@ private void processEvent(AbstractEventSimple event) {
     private void removeFromCacheTree(final Map<Integer, TreeNode> versionTreeMap,
                                      final TreeNode deleteNode) {
         versionTreeMap.remove(deleteNode.getId());
-        for (TreeNode child : deleteNode.getChilds()) {
+        for (TreeNode child : deleteNode.getChildren()) {
             removeFromCacheTree(versionTreeMap, child);
         }
     }
@@ -1048,7 +1331,7 @@ private void processEvent(AbstractEventSimple event) {
         case ADD_LEVEL_BEFORE: {
             newNode = createEmptyTreeNode(newNodeId, staticNode.getParent());
 
-            LinkedList<TreeNode> parentChilds = staticNode.getParent().getChilds();
+            List<TreeNode> parentChilds = staticNode.getParent().getChildren();
             int staticNodeIndex = parentChilds.indexOf(staticNode);
             parentChilds.add(staticNodeIndex, newNode);
             repositionList(parentChilds);
@@ -1058,7 +1341,7 @@ private void processEvent(AbstractEventSimple event) {
         case ADD_LEVEL_AFTER: {
             newNode = createEmptyTreeNode(newNodeId, staticNode.getParent());
 
-            LinkedList<TreeNode> parentChilds = staticNode.getParent().getChilds();
+            List<TreeNode> parentChilds = staticNode.getParent().getChildren();
             int staticNodeIndex = parentChilds.indexOf(staticNode) + 1;
             parentChilds.add(staticNodeIndex, newNode);
             repositionList(parentChilds);
@@ -1068,8 +1351,8 @@ private void processEvent(AbstractEventSimple event) {
         case ADD_LEVEL_UNDER: {
             newNode = createEmptyTreeNode(newNodeId, staticNode);
 
-            LinkedList<TreeNode> parentChilds = staticNode.getChilds();
-            parentChilds.addLast(newNode);
+            List<TreeNode> parentChilds = staticNode.getChildren();
+            parentChilds.add(newNode);
             repositionList(parentChilds);
             initReferenceMarkAndDepth(newNode, newNode.getPosition());
             break;
@@ -1111,22 +1394,21 @@ private void processEvent(AbstractEventSimple event) {
 
             for (Integer transportNodeId : nodeIds) {
                 TreeNode transportNode = versionTreeMap.get(transportNodeId);
-                transportNode.getParent().getChilds().remove(transportNode);
+                transportNode.getParent().getChildren().remove(transportNode);
                 transportNodes.add(transportNode);
             }
             TreeNode transportParent = transportNodes.get(0).getParent();
-            repositionList(transportParent.getChilds());
+            repositionList(transportParent.getChildren());
 
             boolean siblingMove = transportParent.equals(staticParent);
-            if (!siblingMove && !transportParent.getChilds().isEmpty()) {
+            if (!siblingMove && !transportParent.getChildren().isEmpty()) {
                 //při přesunu přečíslujeme všechny node, které jsou pod rodičem, jehož děti přesouváme
-                initReferenceMarkLower(transportParent.getChilds(), transportParent.getChilds().getFirst());
+                initReferenceMarkLower(transportParent.getChildren(), transportParent.getChildren().get(0));
             }
-
 
             switch (moveLevelType) {
                 case MOVE_LEVEL_BEFORE: {
-                    LinkedList<TreeNode> staticParentChilds = staticParent.getChilds();
+                    List<TreeNode> staticParentChilds = staticParent.getChildren();
                     int staticIndex = staticParentChilds.indexOf(staticNode);
 
                     for (TreeNode transportNode : transportNodes) {
@@ -1135,12 +1417,10 @@ private void processEvent(AbstractEventSimple event) {
 
                     staticParentChilds.addAll(staticIndex, transportNodes);
                     repositionList(staticParentChilds);
-
-
                     break;
                 }
                 case MOVE_LEVEL_AFTER: {
-                    LinkedList<TreeNode> staticParentChilds = staticParent.getChilds();
+                    List<TreeNode> staticParentChilds = staticParent.getChildren();
                     int staticIndex = staticParentChilds.indexOf(staticNode) + 1;
 
                     for (TreeNode transportNode : transportNodes) {
@@ -1152,11 +1432,11 @@ private void processEvent(AbstractEventSimple event) {
                     break;
                 }
                 case MOVE_LEVEL_UNDER: {
-                    LinkedList<TreeNode> staticParentChilds = staticNode.getChilds();
+                    List<TreeNode> staticParentChilds = staticNode.getChildren();
 
                     for (TreeNode transportNode : transportNodes) {
                         transportNode.setParent(staticNode);
-                        staticParentChilds.addLast(transportNode);
+                        staticParentChilds.add(transportNode);
                     }
 
                     repositionList(staticParentChilds);
@@ -1164,15 +1444,12 @@ private void processEvent(AbstractEventSimple event) {
                 }
             }
 
-
-            //přečíslujeme všechny prvky pod prvním přidaným (včetně) -> pokud přesouváme na stejné úrovni, přečíslujeme všechny
+            // přečíslujeme všechny prvky pod prvním přidaným (včetně) -> pokud přesouváme na stejné úrovni, přečíslujeme všechny
             if (siblingMove) {
-                initReferenceMarkLower(staticParent.getChilds(), staticParent.getChilds().getFirst());
+                initReferenceMarkLower(staticParent.getChildren(), staticParent.getChildren().get(0));
             } else {
-                initReferenceMarkLower(staticParent.getChilds(), transportNodes.get(0));
+                initReferenceMarkLower(staticParent.getChildren(), transportNodes.get(0));
             }
-
-
         }
     }
 
@@ -1194,7 +1471,7 @@ private void processEvent(AbstractEventSimple event) {
      * @param childs          seznam všech potomků, ve kterých hledáme
      * @param firstReposition první uzel, od kterého se začnou aktualizovat označení
      */
-    private void initReferenceMarkLower(final LinkedList<TreeNode> childs, final TreeNode firstReposition) {
+    private void initReferenceMarkLower(final List<TreeNode> childs, final TreeNode firstReposition) {
 
         boolean initReference = false;
         int position = firstReposition.getPosition();
@@ -1283,7 +1560,79 @@ private void processEvent(AbstractEventSimple event) {
      * @return požadovaná data
      */
     public NodeData getNodeData(final NodeDataParam param, @Nullable UserDetail userDetail) {
+    	Objects.requireNonNull(param);
+    	Objects.requireNonNull(param.getNodeId());
+    	Objects.requireNonNull(param.getFundVersionId());
+    	ArrFundVersion fundVersion = arrangementService.getFundVersion(param.getFundVersionId());
 
+    	// kontrola oprávnění ADMIN, FUND_RD_ALL, FUND_RD
+        AuthorizationRequest fundRead = AuthorizationRequest.hasPermission(Permission.ADMIN)
+                .or(Permission.FUND_RD_ALL)
+                .or(Permission.FUND_RD, fundVersion);
+        if (!fundRead.matches(userDetail)) {
+            throw new SystemException("Uživatel nemá oprávnění na AS.", 
+            		BaseCode.INSUFFICIENT_PERMISSIONS).set("fundVersionId", param.getFundVersionId());
+        }
+
+        Map<Integer, TreeNode> treeMap = getVersionTreeCache(fundVersion);
+
+        TreeNode node = treeMap.get(param.getNodeId());
+        if (node == null) {
+            throw new SystemException("Node podle id nenalezen nodeId=" + param.getNodeId(), BaseCode.INVALID_STATE);
+        }
+
+        NodeData result = new NodeData();
+
+        TreeNode parentNode = node.getParent();
+        if (parentNode == null) { // pokud nemá rodiče, jedná se o kořen a ten je vždy pouze jediný
+            result.setNodeIndex(0);
+            result.setNodeCount(1);
+        } else {
+            result.setNodeIndex(parentNode.getChildren().indexOf(node));
+            result.setNodeCount(parentNode.getChildren().size());
+        }
+
+        if (BooleanUtils.isTrue(param.getFormData())) {
+            result.setFormData(formService.getNodeFormData(fundVersion, node.getId()));
+        }
+        
+        if (BooleanUtils.isTrue(param.getParents())) {
+            result.setParents(getNodeParents(treeMap, node, fundVersion));
+        }
+
+        if (BooleanUtils.isTrue(param.getChildren())) {
+            result.setChildren(getChildren(node, fundVersion));
+        }
+
+        Integer siblingsFrom = param.getSiblingsFrom();
+        String fulltext = StringUtils.isEmpty(param.getSiblingsFilter()) ? null : param.getSiblingsFilter().trim();
+        int maxCount = param.getSiblingsMaxCount() == null || param.getSiblingsMaxCount() > 1000 ? 1000 : param.getSiblingsMaxCount();
+        if (siblingsFrom != null) {
+            if (siblingsFrom < 0) {
+                throw new IllegalArgumentException("Index pro sourozence nesmí být záporný: " + siblingsFrom);
+            }
+            LevelTreeCacheService.SiblingsNew siblings = getNodeSiblings(node, fundVersion, siblingsFrom, maxCount, fulltext, userDetail);
+            result.setNodeIndex(siblings.getNodeIndex());
+            result.setNodeCount(siblings.getSiblingsCount());
+            result.setSiblings(siblings.getSiblings());
+        } else if (fulltext != null) { // pokud je zafiltrováno, je nutné brát výsledky (index + počet sourozenů) vzhledem k filtru
+            LevelTreeCacheService.SiblingsNew siblings = getNodeSiblings(node, fundVersion, 0, maxCount, fulltext, userDetail);
+            result.setNodeIndex(siblings.getNodeIndex());
+            result.setNodeCount(siblings.getSiblingsCount());
+        }
+
+        return result;
+    }
+
+	/**
+     * Získání dat pro JP (formálář, rodiče, potomky, sourozence, ...)
+     *
+     * @param param parametry požadovaných dat
+     * @param userDetail přihlášený uživatel
+     * @return požadovaná data
+     */
+    @Deprecated
+    public NodeDataVO getNodeDataOld(final NodeDataParamVO param, @Nullable UserDetail userDetail) {
     	Objects.requireNonNull(param);
     	Objects.requireNonNull(param.getFundVersionId());
 
@@ -1300,7 +1649,7 @@ private void processEvent(AbstractEventSimple event) {
             } else {
                 parentNode = treeMap.get(param.getParentNodeId());
             }
-            node = parentNode.getChilds().get(param.getNodeIndex());
+            node = parentNode.getChildren().get(param.getNodeIndex());
         } else {
             throw new SystemException("Není zvolen identifikátor JP nebo její index", BaseCode.INVALID_STATE);
         }
@@ -1310,27 +1659,27 @@ private void processEvent(AbstractEventSimple event) {
                     .set("nodeId", param.getNodeId());
         }
 
-        NodeData result = new NodeData();
+        NodeDataVO result = new NodeDataVO();
 
         TreeNode parentNode = node.getParent();
         if (parentNode == null) { // pokud nemá rodiče, jedná se o kořen a ten je vždy pouze jediný
             result.setNodeIndex(0);
             result.setNodeCount(1);
         } else {
-            result.setNodeIndex(parentNode.getChilds().indexOf(node));
-            result.setNodeCount(parentNode.getChilds().size());
+            result.setNodeIndex(parentNode.getChildren().indexOf(node));
+            result.setNodeCount(parentNode.getChildren().size());
         }
 
         if (BooleanUtils.isTrue(param.getFormData())) {
-            result.setFormData(formService.getNodeFormData(fundVersion, node.getId()));
+            result.setFormData(formService.getNodeFormDataOld(fundVersion, node.getId()));
         }
 
         if (BooleanUtils.isTrue(param.getParents())) {
-            result.setParents(getNodeParents(treeMap, node, fundVersion));
+            result.setParents(getNodeParentsOld(treeMap, node, fundVersion));
         }
 
         if (BooleanUtils.isTrue(param.getChildren())) {
-            result.setChildren(getChildren(node, fundVersion));
+            result.setChildren(getChildrenOld(node, fundVersion));
         }
 
         Integer siblingsFrom = param.getSiblingsFrom();
@@ -1340,12 +1689,12 @@ private void processEvent(AbstractEventSimple event) {
             if (siblingsFrom < 0) {
                 throw new IllegalArgumentException("Index pro sourozence nesmí být záporný: " + siblingsFrom);
             }
-            LevelTreeCacheService.Siblings siblings = getNodeSiblings(node, fundVersion, siblingsFrom, maxCount, fulltext, userDetail);
+            LevelTreeCacheService.Siblings siblings = getNodeSiblingsOld(node, fundVersion, siblingsFrom, maxCount, fulltext, userDetail);
             result.setNodeIndex(siblings.getNodeIndex());
             result.setNodeCount(siblings.getSiblingsCount());
             result.setSiblings(siblings.getSiblings());
         } else if (fulltext != null) { // pokud je zafiltrováno, je nutné brát výsledky (index + počet sourozenů) vzhledem k filtru
-            LevelTreeCacheService.Siblings siblings = getNodeSiblings(node, fundVersion, 0, maxCount, fulltext, userDetail);
+            LevelTreeCacheService.Siblings siblings = getNodeSiblingsOld(node, fundVersion, 0, maxCount, fulltext, userDetail);
             result.setNodeIndex(siblings.getNodeIndex());
             result.setNodeCount(siblings.getSiblingsCount());
         }
@@ -1359,7 +1708,7 @@ private void processEvent(AbstractEventSimple event) {
         if (parentNode == null) {
             childs = Collections.singletonList(node);
         } else {
-            childs = parentNode.getChilds();
+            childs = parentNode.getChildren();
         }
         int diff = childs.size() - (childs.size() % maxCount);
         if (diff == childs.size()) {
@@ -1375,10 +1724,9 @@ private void processEvent(AbstractEventSimple event) {
      * @param fundVersion verze AS
      * @return seznam přímých potomků
      */
-    private Collection<TreeNodeVO> getChildren(final TreeNode node, final ArrFundVersion fundVersion) {
-
+    private List<NodeTreeData> getChildren(final TreeNode node, final ArrFundVersion fundVersion) {
         LinkedHashMap<Integer, TreeNode> nodesMap = new LinkedHashMap<>();
-        for (TreeNode treeNode : node.getChilds()) {
+        for (TreeNode treeNode : node.getChildren()) {
             nodesMap.put(treeNode.getId(), treeNode);
         }
 
@@ -1390,6 +1738,29 @@ private void processEvent(AbstractEventSimple event) {
         boolean fullArrPerm = userService.hasFullArrPerm(fundVersion.getFundId());
         return convertToTreeNodeWithPerm(getNodes(nodesMap, node, param, fundVersion).values(), fundVersion, fullArrPerm);
     }
+    
+    /**
+     * Získání seznamu přímých potomků.
+     *
+     * @param node        uzel, jehož potomky budeme chceme
+     * @param fundVersion verze AS
+     * @return seznam přímých potomků
+     */
+    @Deprecated
+    private Collection<TreeNodeVO> getChildrenOld(final TreeNode node, final ArrFundVersion fundVersion) {
+        LinkedHashMap<Integer, TreeNode> nodesMap = new LinkedHashMap<>();
+        for (TreeNode treeNode : node.getChildren()) {
+            nodesMap.put(treeNode.getId(), treeNode);
+        }
+
+        NodeParam param = NodeParam.create()
+                .name()
+                .icon()
+                .referenceMark();
+
+        boolean fullArrPerm = userService.hasFullArrPerm(fundVersion.getFundId());
+        return convertToTreeNodeWithPermOld(getNodes(nodesMap, node, param, fundVersion).values(), fundVersion, fullArrPerm);
+    }
 
     /**
      * Konverze požadovaných objektů do objektů pro strom s vyhodnoceným oprávněním.
@@ -1399,7 +1770,41 @@ private void processEvent(AbstractEventSimple event) {
      * @param fullArrPerm máme oprávnění pořádat v celém AS
      * @return převedené JP
      */
-    private List<TreeNodeVO> convertToTreeNodeWithPerm(final Collection<Node> nodes, final ArrFundVersion version, final boolean fullArrPerm) {
+    private List<NodeTreeData> convertToTreeNodeWithPerm(final Collection<Node> nodes, final ArrFundVersion version, final boolean fullArrPerm) {
+        List<NodeTreeData> result = new ArrayList<>(nodes.size());
+
+        Set<Integer> nodeIds = new HashSet<>();
+        for (Node node : nodes) {
+            nodeIds.add(node.getId());
+        }
+
+        Map<Integer, Boolean> permNodeIdMap = fullArrPerm ? Collections.emptyMap() : calcPermNodeIdMap(version, nodeIds);
+
+        for (Node node : nodes) {
+        	NodeTreeData treeNode = new NodeTreeData();
+            treeNode.setId(node.getId());
+            treeNode.setName(node.getName());
+            treeNode.setReferenceMark(Arrays.asList(node.getReferenceMark()));
+            treeNode.setHasChildren(node.isHasChildren());
+            treeNode.setIcon(node.getIcon());
+            treeNode.setDepth(node.getDepth());
+            treeNode.setVersion(node.getVersion());
+            treeNode.setArrPerm(fullArrPerm ? true : permNodeIdMap.get(node.getId()));
+            result.add(treeNode);
+        }
+        return result;
+    }
+
+    /**
+     * Konverze požadovaných objektů do objektů pro strom s vyhodnoceným oprávněním.
+     *
+     * @param nodes JP k převodu
+     * @param version     verze AS
+     * @param fullArrPerm máme oprávnění pořádat v celém AS
+     * @return převedené JP
+     */
+    @Deprecated
+    private List<TreeNodeVO> convertToTreeNodeWithPermOld(final Collection<Node> nodes, final ArrFundVersion version, final boolean fullArrPerm) {
         List<TreeNodeVO> result = new ArrayList<>(nodes.size());
 
         Set<Integer> nodeIds = new HashSet<>();
@@ -1479,6 +1884,95 @@ private void processEvent(AbstractEventSimple event) {
      * @param nodeToIssueMap
      * @return převedené JP
      */
+    private List<NodeAccordionData> convertToAccordionNodeData(final Collection<Node> nodes, Map<Integer, List<WfIssue>> nodeToIssueMap) {
+        return nodes.stream().map(node -> {
+
+        	NodeAccordionData accordionNode = new NodeAccordionData();
+            accordionNode.setId(node.getId());
+            accordionNode.setAccordionLeft(node.getAccordionLeft());
+            accordionNode.setAccordionRight(node.getAccordionRight());
+            accordionNode.setReferenceMark(Arrays.asList(node.getReferenceMark()));
+            accordionNode.setVersion(node.getVersion());
+
+            // set list of DigitizationRequest
+            List<ArrDigitizationRequestVO> requestsVO = node.getDigitizationRequests();
+            List<DigitizationRequest> requests = requestsVO.stream()
+            		.map(i -> {
+            			List<TreeNodeVO> treeNode = i.getNodes();
+            			List<NodeTreeData> nodeTreeDataList = treeNode.stream()
+            					.map(n -> {
+            						NodeTreeData ntd = new NodeTreeData(n.getId(), n.getDepth(), n.getName(), n.isHasChildren(), 
+            												Arrays.asList(n.getReferenceMark()), n.getVersion());
+            						ntd.setArrPerm(n.isArrPerm());
+            						return ntd;
+            					})
+            					.toList();
+
+            			DigitizationRequest request = new DigitizationRequest();
+            			request.setId(i.getId());
+            			request.setCode(i.getCode());
+            			request.setCreate(DateTimeConvertor.toLocalDate(i.getCreate()));
+            			request.setDescription(i.getDescription());
+            			request.setDigitizationFrontdeskId(i.getDigitizationFrontdeskId());
+            			request.setExternalSystemCode(i.getExternalSystemCode());
+            			request.setNodes(nodeTreeDataList);
+            			request.setNodesCount(i.getNodesCount());
+            			request.setRejectReason(i.getRejectReason());
+            			request.setResponseExternalSystem(DateTimeConvertor.toLocalDate(i.getResponseExternalSystem()));
+            			request.setSend(DateTimeConvertor.toLocalDate(i.getSend()));
+            			request.setState(RequestState.valueOf(i.getState().name()));
+            			request.setUsername(i.getUsername());
+            			return request;
+            		})
+            		.toList();
+            accordionNode.setDigitizationRequests(requests);
+
+            // set NodeConformity
+            NodeConformityVO ncVO = node.getNodeConformity();
+            List<NodeConformityError> errorList = ncVO.getErrorList().stream()
+            		.map(e -> new NodeConformityError(e.getDescItemObjectId(), e.getDescription(), e.getPolicyTypeId()))
+            		.toList();
+
+            List<NodeConformityMissing> missingList = ncVO.getMissingList().stream()
+            		.map(m -> new NodeConformityMissing(m.getDescItemTypeId(), m.getDescItemSpecId(), m.getDescription(), m.getPolicyTypeId()))
+            		.toList();
+
+            List<Integer> viewPolicyTypeIds = new ArrayList<>(); 
+            ncVO.getPolicyTypeIdsVisible().entrySet().forEach(e -> {
+            	Boolean value = e.getValue();
+            	if (value) {
+            		viewPolicyTypeIds.add(e.getKey());
+            	}
+            });
+
+            NodeConformity nodeConformity = new NodeConformity();
+            nodeConformity.setDate(DateTimeConvertor.toLocalDate(ncVO.getDate()));
+            nodeConformity.setState(NodeConformityState.valueOf(ncVO.getState().name()));
+            nodeConformity.setErrorList(errorList);
+            nodeConformity.setMissingList(missingList);
+            nodeConformity.setViewPolicyTypeIds(viewPolicyTypeIds);
+            accordionNode.setNodeConformity(nodeConformity);
+
+            // set list of WfSimpleIssue
+            List<WfIssue> wfIssues = nodeToIssueMap.getOrDefault(node.getId(), Collections.emptyList());
+            List<WfSimpleIssue> issues = wfIssues.stream()
+            		.map(i -> new WfSimpleIssue(i.getIssueId(), i.getNumber(), i.getDescription()))
+            		.toList();
+            accordionNode.setIssues(issues);
+
+            return accordionNode;
+
+        }).collect(Collectors.toList());
+    }
+
+    /**
+     * Konverze požadovaných objektů do objektů pro accordion.
+     *
+     * @param nodes JP k převodu
+     * @param nodeToIssueMap
+     * @return převedené JP
+     */
+    @Deprecated
     private List<AccordionNodeVO> convertToAccordionNode(final Collection<Node> nodes, Map<Integer, List<WfIssue>> nodeToIssueMap) {
         return nodes.stream().map(n -> {
 
@@ -1995,7 +2489,7 @@ private void processEvent(AbstractEventSimple event) {
         TreeNode parent = treeNode.getParent();
 
         Node node = new Node(id, arrNode.getVersion(), arrNode.getUuid());
-        node.setHasChildren(!treeNode.getChilds().isEmpty());
+        node.setHasChildren(!treeNode.getChildren().isEmpty());
         node.setDepth(treeNode.getDepth());
 
         String defaultTitle;
@@ -2139,7 +2633,7 @@ private void processEvent(AbstractEventSimple event) {
      * @param userDetail  přihlášený uživatel
      * @return požadovaní sourozenci
      */
-    public Siblings getNodeSiblings(final TreeNode node, final ArrFundVersion fundVersion, final int fromIndex, final int maxCount, @Nullable final String fulltextFilter, @Nullable UserDetail userDetail) {
+    public SiblingsNew getNodeSiblings(final TreeNode node, final ArrFundVersion fundVersion, final int fromIndex, final int maxCount, @Nullable final String fulltextFilter, @Nullable UserDetail userDetail) {
         LinkedHashMap<Integer, TreeNode> nodesMap = new LinkedHashMap<>();
         TreeNode parentNode = node.getParent();
 
@@ -2147,7 +2641,65 @@ private void processEvent(AbstractEventSimple event) {
         if (parentNode == null) {
             childs = Collections.singletonList(node);
         } else {
-            childs = parentNode.getChilds();
+            childs = parentNode.getChildren();
+        }
+
+        if (fulltextFilter != null) {
+            Set<Integer> fulltextIds = arrangementService.findNodeIdsByFulltext(fundVersion, parentNode == null ? null : parentNode.getId(), fulltextFilter, Depth.ONE_LEVEL);
+            childs = new ArrayList<>(childs);
+            childs.removeIf(next -> !fulltextIds.contains(next.getId()));
+        }
+
+        for (int i = fromIndex; i < childs.size() && nodesMap.size() < maxCount; i++) {
+            TreeNode treeNode = childs.get(i);
+            if (treeNode != null) {
+                nodesMap.put(treeNode.getId(), treeNode);
+            } else {
+                logger.warn("Uzel s identifikátorem " + node.getId() + " neexistuje ve verzi " + fundVersion.getFundVersionId());
+            }
+        }
+
+        NodeParam param = NodeParam.create()
+                .accordion()
+                .referenceMark()
+                .digitizationRequest()
+                .nodeConformity();
+
+        LinkedHashMap<Integer, Node> nodeMap = getNodes(nodesMap, parentNode, param, fundVersion);
+
+        Map<Integer, List<WfIssue>> nodeToIssueMap = issueDataService.groupOpenIssueByNodeId(nodeMap.keySet(), userDetail);
+
+        List<NodeAccordionData> accordionNodes = convertToAccordionNodeData(nodeMap.values(), nodeToIssueMap);
+
+        int nodeIndex = childs.indexOf(node);
+        if (nodeIndex < 0) {
+            nodeIndex = 0;
+        }
+
+        return new SiblingsNew(accordionNodes, childs.size(), nodeIndex);
+    }
+
+    /**
+     * Získání seznam sourozenců k JP.
+     *
+     * @param node        uzel, jehož sourozence chceme
+     * @param fundVersion verze AS
+     * @param fromIndex   index JP v úrovni, od kterého chceme sourozence
+     * @param maxCount    maximální počet sourozenců, které chceme
+     * @param fulltextFilter    filtrování sourozenců
+     * @param userDetail  přihlášený uživatel
+     * @return požadovaní sourozenci
+     */
+    @Deprecated
+    public Siblings getNodeSiblingsOld(final TreeNode node, final ArrFundVersion fundVersion, final int fromIndex, final int maxCount, @Nullable final String fulltextFilter, @Nullable UserDetail userDetail) {
+        LinkedHashMap<Integer, TreeNode> nodesMap = new LinkedHashMap<>();
+        TreeNode parentNode = node.getParent();
+
+        List<TreeNode> childs;
+        if (parentNode == null) {
+            childs = Collections.singletonList(node);
+        } else {
+            childs = parentNode.getChildren();
         }
 
         if (fulltextFilter != null) {
@@ -2183,6 +2735,48 @@ private void processEvent(AbstractEventSimple event) {
         }
 
         return new Siblings(accordionNodes, childs.size(), nodeIndex);
+    }
+
+    /**
+     * Struktura pro sourozence JP.
+     */
+    public static class SiblingsNew {
+
+        /**
+         * Seznam sourozenců.
+         */
+        private List<NodeAccordionData> siblings;
+
+        /**
+         * Skutečný index JP.
+         */
+        private int nodeIndex;
+
+        /**
+         * Celkový počet sourozenců JP.
+         */
+        private int siblingsCount;
+
+        public SiblingsNew(final List<NodeAccordionData> siblings, final int siblingsCount, final int nodeIndex) {
+            if (nodeIndex < 0) {
+                throw new IllegalArgumentException("nodeIndex is " + nodeIndex);
+            }
+            this.siblings = siblings;
+            this.siblingsCount = siblingsCount;
+            this.nodeIndex = nodeIndex;
+        }
+
+        public List<NodeAccordionData> getSiblings() {
+            return siblings;
+        }
+
+        public int getNodeIndex() {
+            return nodeIndex;
+        }
+
+        public int getSiblingsCount() {
+            return siblingsCount;
+        }
     }
 
     /**
@@ -2258,8 +2852,6 @@ private void processEvent(AbstractEventSimple event) {
                                                    final ViewTitles viewTitles,
                                                    final Map<Integer, TitleItemsByType> valuesMap,
                                                    final String[] parentReferenceMark) {
-
-
         String separator = " ";
 
         TreeNode parent = node.getParent();
@@ -2268,7 +2860,7 @@ private void processEvent(AbstractEventSimple event) {
         }
 
         if (parentReferenceMark.length == 0) {
-            return new String[] {node.getPosition().toString()};
+            return new String[] {Integer.toString(node.getPosition())};
         }
 
         String[] parentMark = parentReferenceMark;
@@ -2314,7 +2906,6 @@ private void processEvent(AbstractEventSimple event) {
     private String[] createClientReferenceMarkFromRoot(final TreeNode node,
                                                        final ViewTitles viewTitles,
                                                        final Map<Integer, TitleItemsByType> valuesMap) {
-
         TreeNode parent = node.getParent();
         if (parent == null) {
             return new String[0];
@@ -2323,8 +2914,7 @@ private void processEvent(AbstractEventSimple event) {
 
         String[] parentReferenceMark = createClientReferenceMarkFromRoot(parent, viewTitles, valuesMap);
 
-        String[] referenceMark = createClientNodeReferenceMark(node, levelTypeId, viewTitles, valuesMap,
-                parentReferenceMark);
+        String[] referenceMark = createClientNodeReferenceMark(node, levelTypeId, viewTitles, valuesMap, parentReferenceMark);
         return referenceMark;
     }
 
@@ -2401,7 +2991,7 @@ private void processEvent(AbstractEventSimple event) {
 
         if (depth == Depth.ONE_LEVEL) {
             TreeNode node = versionTreeCache.get(nodeId);
-            return node.getChilds().stream().mapToInt(TreeNode::getId).boxed().collect(Collectors.toSet());
+            return node.getChildren().stream().mapToInt(TreeNode::getId).boxed().collect(Collectors.toSet());
         }
 
         Set<Integer> nodeIds = new HashSet<>();
@@ -2411,9 +3001,9 @@ private void processEvent(AbstractEventSimple event) {
         while (!children.isEmpty()) {
             TreeNode node = children.poll();
 
-            List<TreeNode> childs = node.getChilds();
+            List<TreeNode> childs = node.getChildren();
             if (childs != null) {
-                node.getChilds().forEach(child -> {
+                node.getChildren().forEach(child -> {
                     nodeIds.add(child.getId());
                     children.add(child);
                 });
@@ -2431,11 +3021,53 @@ private void processEvent(AbstractEventSimple event) {
      */
     public void walkTree(@NotNull final TreeNode root, @NotNull final Consumer<TreeNode> callback) {
         callback.accept(root);
-        LinkedList<TreeNode> childs = root.getChilds();
+        List<TreeNode> childs = root.getChildren();
         if (childs != null) {
             for (TreeNode child : childs) {
                 walkTree(child, callback);
             }
         }
     }
+
+    /**
+     * Return list of parents
+     * @param version
+     * @param nodeId
+     * @return
+     */
+	public synchronized List<Integer> getParentNodes(ArrFundVersion version, Integer nodeId) {
+		Map<Integer, TreeNode> nodeMap = getNodeHierarchy(version).getNodes();		
+		TreeNode treeNode = nodeMap.get(nodeId);
+		if(treeNode==null) {
+			throw new ObjectNotFoundException("Missing node in fundVersion, nodeId="+nodeId, BaseCode.ID_NOT_EXIST)
+				.setId(nodeId)
+				.set("fundVersion", version.getFundVersionId());
+		}
+		// skip this node
+		treeNode = treeNode.getParent();
+		if(treeNode==null) {
+			return Collections.emptyList();
+		} else {
+			List<Integer> nodeIds = new ArrayList<>();
+			do {
+				nodeIds.add(treeNode.getId());
+				treeNode = treeNode.getParent();
+			} while(treeNode!=null);
+			
+			return nodeIds;
+		}		
+	}
+
+	public synchronized TreeNode getTreeNode(ArrFundVersion fundVersion, ArrNode node) {
+		Map<Integer, TreeNode> nodeMap = getNodeHierarchy(fundVersion).getNodes();
+		return nodeMap.get(node.getNodeId());
+	}
+
+	public Collection<TreeNode> findNodesByDirection(ArrNode node, ArrFundVersion version, RelatedNodeDirection direction) {
+		NodeHierarchy nh = getNodeHierarchy(version);
+		if(nh==null) {
+			throw new BusinessException("Cannot read node hierarchy", BaseCode.INVALID_STATE);
+		}
+		return nh.getNodesByDirection(node.getNodeId(), direction);
+	}
 }
